# snap-machines

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json  vercel.json
.github/workflows/: ci.yml
apps/demo/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/demo/src/: AiChatPanel.tsx  App.tsx  ControlPanel.tsx  ControllerPanel.tsx  ControllerRuntimePanel.tsx  catalog-medieval.ts  catalog.ts  controllerWorker.ts  machines.ts  trebuchet-blocks.ts
apps/demo/src/ai/: chatTypes.ts  providers.ts  sandbox.ts  settingsStore.ts  snapTool.ts  snapToolHelpers.ts  systemPrompt.ts  useSnapChat.ts
crates/snap-machines-rapier/: Cargo.toml  README.md
crates/snap-machines-rapier/src/: lib.rs  runtime.rs  types.rs  validation.rs
crates/snap-machines-viewer/: Cargo.toml  README.md
crates/snap-machines-viewer/fixtures/: hinge-thruster-machine.envelope.json  rover.envelope.json  rover.machine.json  simple-house.envelope.json  turret.envelope.json  turret.graph.json
crates/snap-machines-viewer/src/: main.rs
demo/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
demo/src/: App.tsx  BlockMesh.tsx  GhostPreview.tsx  PhysicsScene.tsx  PlayerController.tsx  SnapScene.tsx  catalog.ts  machines.ts
examples/: 01-basic-graph.ts  02-snap-placement.ts  03-compile-machine.ts
src/: index.ts  snap.ts
src/__tests__/: plan.test.ts  rapier.test.ts  schema.test.ts
src/compile/: plan.ts
src/examples/: catalog.ts
src/integrations/: three.ts
