[package]
name = "snap-machines-rapier"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Headless Rust + Rapier runtime for serialized snap-machines."
readme = "README.md"
repository = "https://github.com/glavin001/snap-machines"
homepage = "https://github.com/glavin001/snap-machines"
documentation = "https://docs.rs/snap-machines-rapier"
keywords = ["physics", "rapier", "gamedev", "simulation", "machine"]
categories = ["game-development", "simulation"]

[dependencies]
nalgebra = { version = "0.34", features = ["serde-serialize"] }
rapier3d = { version = "0.30", features = ["serde-serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
approx = "0.5"
