[package]
name = "snap-machines-viewer"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Bevy viewer for serialized snap-machines play-mode envelopes."

[dependencies]
bevy = "0.18"
serde_json = "1"
snap-machines-rapier = { path = "../snap-machines-rapier" }

[dev-dependencies]
tempfile = "3"
